--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-QKQP4SPNWT');
 </script>
     <meta charset="utf-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" href="./autumn-leaf.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
